# wtf

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  linux_setup.sh  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  plugin-request.md
.github/workflows/: unit-test-ci.yml
python3-wtf/src/: main.py  package_outputs.py  plugin_finder.py  plugin_manager.py  thread_runner.py  wtf_cli.py
python3-wtf/src/plugins/: lscpu_plugin.py  lsmem_plugin.py  plugin.py  top_plugin.py  tshark_plugin.py
python3-wtf/test/: common_test_functions.py  test_cli.py  test_package_outputs.py  test_plugin_finder.py  test_thread_runner.py
python3-wtf/test/test_plugins/: test_top_plugin.py  test_tshark_plugin.py
python3_wtf/src/: pyproject.toml  requirements-dev.txt
python3_wtf/src/python3_wtf/: main.py  package_outputs.py  plugin_manager.py  thread_runner.py  wtf_cli.py
python3_wtf/src/python3_wtf/plugins/: lscpu_plugin.py  lsmem_plugin.py  plugin.py  top_plugin.py  tshark_plugin.py
python3_wtf/test/: common_test_functions.py  test_cli.py  test_package_outputs.py  test_plugin.py  test_plugin_finder.py  test_plugin_manager.py  test_thread_runner.py  test_wtf_main.py
python3_wtf/test/test_builds/: test_pyproject_toml.py
python3_wtf/test/test_plugins/: test_lscpu_plugin.py  test_lsmem_plugin.py  test_top_plugin.py  test_tshark_plugin.py
src/: thread_runner.py
src/plugins/: plugin.py  top_plugin.py
test/: test_thread_runner.py
tools/: build.sh  install_git_hooks.sh  linux_setup.sh
tools/git_hooks/: pre-commit
